# aw-server

./: .gitignore  MANIFEST.in  Makefile  README.md  aw-server.spec  build.sh  crontab.sh  komutracker.service  pyproject.toml  reminder_turnon_tracker.py  report_spent_time.py  start.sh  wsgi.py
.github/workflows/: build.yml  build_server.yml  lint.yml
aw_server/: __about__.py  __init__.py  api.py  change_config.sh  config.py  config_ex.py  custom_static.py  log.py  main.py  rest.py  server.py  tracker_report.py
misc/: aw-server.service  crontab  komutracker.service  reminder_turnon_tracker.py  report_spent_time.py
tests/: conftest.py  test_client.py  test_server.py
