[tool.poetry]
name = "aw-server"
version = "0.11.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.scripts]
aw-server = "aw_server:main"

[tool.poetry.dependencies]
python = "^3.8"
aw-client = "^0.5.8"
appdirs = "*"
flask = "2.1.2"
flask-restx = "^0.5.1"
flask-cors = "*"
pytz = "^2022.6"
waitress = "^2.1.2"
werkzeug = "2.1.2"
pymongo = "^4.3.3"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
aw-core = {path = "../aw-core"}

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^6.0"
pytest-flask = "*"
pytest-benchmark = "*"
pytest-cov = "*"
types-Werkzeug = "*"
types-pkg-resources = "*"
types-Flask = "*"
black = "^22.1.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report=term --cov-report=xml --cov-report=html --cov=aw_server"
python_files = ["*.py",]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
